Update 11.08. 11:33h - thb:  index.html
Deleted any reference to Telekom

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h1>Willkommen in WBV – Ihre Stadt. Ihre Zukunft. Ihre Glasfaser.</h1>
         <p>
           WBV_BeMo begleitet die Planung und Koordination des Glasfaserausbaus (FTTH) in WBV. Auf dieser Seite finden Sie Informationen zur Stadt WBV,
-          zu Ausbaugebieten, Bauphasen, Terminen sowie hilfreiche Links – unter anderem zur Glasfaser-Seite der Telekom.
+          zu Ausbaugebieten, Bauphasen, Terminen sowie hilfreiche Links – unter anderem zur Glasfaser-Seite unseres Ausbaupartners.
         </p>
       </div>
     </section>
@@ -141,10 +141,10 @@
         <div class="card" style="margin-top:1rem">
           <h3>Verfügbarkeit prüfen & weitere Informationen</h3>
           <p>
-            Prüfen Sie die Glasfaser-Verfügbarkeit und informieren Sie sich zu Tarifen, Buchung und Bauabläufen direkt bei der Telekom:
+            Prüfen Sie die Glasfaser-Verfügbarkeit und informieren Sie sich zu Tarifen, Buchung und Bauabläufen direkt bei unserem Ausbaupartner:
           </p>
           <p>
-            <a class="cta" href="https://www.telekom.de/glasfaser" target="_blank" rel="noopener">Zur Telekom-Glasfaser-Seite</a>
+            <a class="cta" href="https://www.telekom.de/glasfaser" target="_blank" rel="noopener">Zur Verfügbarkeitsprüfung</a>
           </p>
           <p style="font-size:.9rem;color:#6b7280">Externer Link öffnet in einem neuen Tab.</p>
         </div>
@@ -165,7 +165,7 @@
           </details>
           <details>
             <summary>Wer ist Ansprechpartner?</summary>
-            <p>WBV_BeMo koordiniert die Ausbauplanung. Für Tarife, Verträge und Buchungen wenden Sie sich an die Telekom über den oben verlinkten Service.</p>
+            <p>WBV_BeMo koordiniert die Ausbauplanung. Für Tarife, Verträge und Buchungen wenden Sie sich an unseren Ausbaupartner über den oben verlinkten Service.</p>
           </details>
         </div>
       </div>
